--- a/app/template/navbar.html
+++ b/app/template/navbar.html
@@ -1,7 +1,7 @@
 <section id="mainnavbar">
     <div class="container">
         <div class="row">
-            <div class="col-sm-10">
+            <div class="col-lg-10 col-xl-10">
                 <nav>
                     <ul>
                         <li><a href="#">Бургеры</a></li>
@@ -15,7 +15,7 @@
                     </ul>
                 </nav>
             </div>
-            <div class="col-sm-2">
+            <div class="col-lg-2 col-xl-2">
                 <div class="filter">
                     <ul>
                         <li><a href="#">Вегетарианцам</a></li>
