--- a/app/template/footer.html
+++ b/app/template/footer.html
@@ -20,13 +20,13 @@
         <div class="container">
             <div class="row v-middle">
                 <div class="col-lg-2 col-xl-2">
-                    <img src="./assets/images/logo-words.png" alt="logo" class="img-fluid"/>
+                    <img src="./assets/images/logo-words.svg" alt="logo" class="img-fluid"/>
                 </div>
                 <div class="col-lg-7 col-xl-7 text-center">
                     © 2017 Burger & Pizzoni. All Right Recived.
                 </div>
                 <div class="col-lg-2 col-xl-2 text-right">
-                    <img src="./assets/images/fcg.png" alt="logo" class="img-fluid"/>
+                    <img src="./assets/images/fcg.svg" alt="logo" class="img-fluid"/>
 
                 </div>
                 <div class="col-lg-1 col-xl-1">
