--- a/app/template/head.html
+++ b/app/template/head.html
@@ -1,3 +1,4 @@
  <title>Main page</title>
  <link href="https://file.myfontastic.com/dSoF5fhfrXeL4z9sKKEJJV/icons.css" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="/static/css/app.css" type="text/css"/>
