--- a/app/template/header.html
+++ b/app/template/header.html
@@ -4,7 +4,7 @@
             <div class="row v-middle">
                 <div class="col-lg-3 col-xl-3">
                     <a href="#city-select" class="select-city-link">Москва</a>
-                    <img src="./assets/images/logo.png" alt="logo"/>
+                    <img src="./assets/images/logo.svg" alt="logo"/>
                 </div>
                 <div class="col-lg-4 col-xl-4">
                     <div class="phone">
