--- a/app/template/navbar.html
+++ b/app/template/navbar.html
@@ -1,7 +1,7 @@
 <section id="mainnavbar">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-10 col-xl-10">
+        <div class="row v-middle">
+            <div class="col-lg-9 col-xl-9">
                 <nav>
                     <ul>
                         <li><a href="#">Бургеры</a></li>
@@ -15,8 +15,9 @@
                     </ul>
                 </nav>
             </div>
-            <div class="col-lg-2 col-xl-2">
+            <div class="col-lg-3 col-xl-3">
                 <div class="filter">
+                    <button class="btn btn-slim filter-btn">Фильтр</button>
                     <ul>
                         <li><a href="#">Вегетарианцам</a></li>
                         <li><a href="#">С рыбой</a></li>
@@ -26,7 +27,10 @@
                         <li><a href="#">С морепродуктами</a></li>
                     </ul>
                 </div>
-                <input type="text" value="Поиск"/>
+                <div class="search-input">
+                    <input type="text" value="Поиск" />
+                </div>
+
             </div>
         </div>
 
