--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -157,6 +157,16 @@ a {
 
 }
 
+.block {
+
+}
+
+.block__title {
+  font-size:3em;
+}
+
+
+
 @import "ui/ui-control-foodsize";
 @import "ui/ui-control-ingred";
 @import "ui/ui-amount-control";
