--- a/app/scss/ui/ui-control-foodsize.scss
+++ b/app/scss/ui/ui-control-foodsize.scss
@@ -17,6 +17,7 @@
   margin-right: -3px;
   display: inline-block;
   text-align: center;
+
 }
 
 .ui-control-foodsize ul li a {
@@ -53,3 +54,9 @@
   border-right:none;
 }
 
+
+.ui-control-foodsize.drinks  ul li{
+  width: 50%;
+}
+
+.ui-control-foodsize.drinks  ul li{text-align: center!important;}
