--- a/app/scss/footer.scss
+++ b/app/scss/footer.scss
@@ -4,6 +4,7 @@
   color:$shady-lady;
   line-height:1;
   padding-top:1rem;
+  box-shadow:3px -3px  16px 3px rgba(0,0,0,0.16);
 }
 
 .wrapper-small{
@@ -23,4 +24,7 @@
   border-bottom:none;
   text-decoration: none;
   color:inherit;
+}
+.footer {
+  background:#fff;
 }
