--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -102,7 +102,7 @@ a {
   background: #fff;
   border-radius: 6px;
   box-shadow: rgba(89, 89, 89, 0.3) 3px 3px 10px;
-  padding: 1.875rem;
+  padding: 1.875em;
 }
 
 .food__item__title {
@@ -122,6 +122,12 @@ a {
   font-size: 2.61em;
 }
 
+@media screen and (max-width: 1200px){
+  .food__item__price {
+    font-size:2em;
+  }
+}
+
 .food__item {
   margin-bottom: 1.8em;
 
@@ -134,6 +140,13 @@ a {
   line-height: 1;
   padding: 1em .5rem;
   width: 100%;
+}
+
+@media screen and (max-width: 1200px){
+  .btn-add-to-cart {
+    font-size:1em;
+  }
+
 }
 
 .padding0 {
@@ -209,8 +222,22 @@ a {
 
 @import "footer";
 
-@media (min-width: 1430px) {
+@media screen and (min-width: 1430px) {
   .container {
     max-width: 1400px;
+  }
+}
+
+
+
+@media screen and (max-width:1400px){
+  #main {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width:1200px){
+  #main {
+    font-size: 12px;
   }
 }
