--- a/app/template/navbar.html
+++ b/app/template/navbar.html
@@ -1,7 +1,7 @@
 <section id="mainnavbar">
     <div class="container">
         <div class="row v-middle">
-            <div class="col-lg-9 col-xl-9">
+            <div class="col-lg-9 col-xl-9  order-3 ">
                 <nav>
                     <ul>
                         <li><a href="#">Бургеры</a></li>
@@ -15,7 +15,7 @@
                     </ul>
                 </nav>
             </div>
-            <div class="col-lg-3 col-xl-3">
+            <div class="col-lg-3 col-xl-3  order-2">
                 <div class="filter">
                     <button class="btn btn-slim filter-btn">Фильтр</button>
                     <ul>
