fix viewport bug

--- a/app/scss/cart.scss
+++ b/app/scss/cart.scss
@@ -237,3 +237,6 @@ section#cart {
 .bonus-balance .actionlink+.actionlink{margin-left:80px;}
 
 .bonus-balance .actionlink {padding-bottom: 7px;}
+
+
+.mini-cart {display:none;}
