--- a/app/template/header.html
+++ b/app/template/header.html
@@ -2,17 +2,17 @@
     <div class="header__topline">
         <div class="container">
             <div class="row v-middle">
-                <div class="col-lg-3 col-xl-3 col-sm-3">
+                <div class="col-lg-3 col-xl-3 col-md-3">
                     <a href="#city-select" class="select-city-link">Москва</a>
                     <a href="/"><img src="./assets/images/logo.svg" alt="logo"/></a>
                 </div>
-                <div class="col-lg-4 col-xl-4 col-sm-4">
+                <div class="col-lg-4 col-xl-4 col-md-4">
                     <div class="phone">
                         <p class="phone__value"> 8-800-555-55-55</p>
                         <p>Звонок бесплатный</p>
                     </div>
                 </div>
-                <div class="col-lg-5 col-xl-5 col-sm-5 col text-right">
+                <div class="col-lg-5 col-xl-5 col-md-5 col text-right">
                     <div class="socials">
                         <a href="#" class="socials__item vk"><i class="icon-vk"></i> </a>
                         <a href="#" class="socials__item fb"><i class="icon-facebook"></i></a>
@@ -21,6 +21,15 @@
                     </div>
                     <a href="#login" class="login-link">Войти</a>
                     <a href="cart.html" class="btn basket-btn">Корзина</a>
+                    <div class="mini-cart" id="mini-cart">
+                        <div class="row">
+                            <div class="col-md-2 col-xs-2">
+                                <img src="./assets/images/foods/extrasmall/1.jpg" alt="food" />
+                            </div>
+                            <div class="col-md-7 col-xs-7"></div>
+                            <div class="col-md-3 col-xs-3"></div>
+                        </div>
+                    </div>
                     <div class="total-price">1 990 ₽</div>
                 </div>
             </div>
