--- a/app/template/navbar.html
+++ b/app/template/navbar.html
@@ -1,7 +1,7 @@
 <section id="mainnavbar">
     <div class="container">
         <div class="row v-middle">
-            <div class="col-lg-9 col-xl-9 order-sm-12  ">
+            <div class="col-lg-9 col-xl-9  ">
                 <nav>
                     <ul>
                         <li><a href="#">Бургеры</a></li>
