--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -109,8 +109,11 @@ a {
 .food__item__title {
   font-size: 1.875em;
   font-weight: 700;
+  height:80px;
 
 }
+
+.food__item__img {margin-bottom: 20px;}
 
 .food__item__ingredients {
   font-weight: 400;
@@ -120,12 +123,12 @@ a {
 
 .food__item__price {
   font-weight: 500;
-  font-size: 2.61em;
+  font-size: 1.5em;
 }
 
 @media screen and (max-width: 1200px){
   .food__item__price {
-    font-size:2em;
+    font-size:1.5em;
   }
 }
 
