--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -113,7 +113,7 @@ a {
 
 }
 
-.food__item__img {margin-bottom: 20px;}
+.food__item__img {margin-bottom: 20px;text-align:center;}
 
 .food__item__ingredients {
   font-weight: 400;
