--- a/app/template/navbar.html
+++ b/app/template/navbar.html
@@ -1,7 +1,10 @@
 <section id="mainnavbar">
     <div class="container">
         <div class="row v-middle">
-            <div class="col-lg-9 col-xl-9  ">
+            <div class="col-xl-1 col-lg-1">
+                <img src="./assets/images/logo.png" alt="logo"  class="img-fluid"/>
+            </div>
+            <div class="col-lg-8 col-xl-8  ">
                 <nav>
                     <ul>
                         <li><a href="#">Бургеры</a></li>
