--- a/app/scss/ui/ui-control-ingred.scss
+++ b/app/scss/ui/ui-control-ingred.scss
@@ -45,3 +45,15 @@
     font-size:11px;
   }
 }
+
+@media screen and (max-width: 771px){
+  .ui-controls-ingred .btn {
+    max-width:100%;
+  }
+
+  .ui-controls-ingred>div:first-child{
+    padding-right: 15px;
+    margin-bottom:5px;
+  }
+  .ui-controls-ingred>div:last-child {padding-left:15px;}
+}
