--- a/app/scss/cart.scss
+++ b/app/scss/cart.scss
@@ -240,3 +240,23 @@ section#cart {
 
 
 .mini-cart {display:none;}
+
+
+.cart-mods {
+  list-style:none;
+  padding:0;
+  margin:0;
+}
+
+.cart-mods li {
+  display:inline-block;
+  padding:10px 5px;
+  background:#d39e00;
+  color:#000000;
+}
+
+.mod-delete{
+  background:none;
+  padding:0;
+  border:none;
+}
