--- a/app/scss/ui/ui-control-ingred.scss
+++ b/app/scss/ui/ui-control-ingred.scss
@@ -33,6 +33,7 @@
 
 .ui-controls-ingred {
   margin-bottom: 13px;
+  position: relative;
 }
 
 .ui-controls-ingred.vertical .btn:first-child{
@@ -57,3 +58,30 @@
   }
   .ui-controls-ingred>div:last-child {padding-left:15px;}
 }
+
+
+.include-mods ul,.exclude-mods ul {
+  li {
+    padding:10px 0;
+    border-bottom:1px solid #4e555b;
+  }
+  display: block;
+  position: absolute;
+  left:0;
+  width:100%;
+  top:0;
+  border:1px solid #4e555b;
+  border-radius:6px;
+  padding:1.5em;
+  z-index: 20;
+  background: #fff;
+  text-align: left;
+  list-style:none;
+  display:none;
+}
+.include-mods ul.active,.exclude-mods ul.active {
+  display: block;
+}
+
+
+
