--- a/src/components/mainOffer/style.scss
+++ b/src/components/mainOffer/style.scss
@@ -33,7 +33,7 @@
   left: -5%;
   background: url("img/pizza_mashr.png") center left no-repeat;
   background-size: contain;
-  width: 905px;
+  width: 47vw;
   height: 450px;
 
   .add-mo-to-cart {
@@ -54,7 +54,7 @@
   top: 22%;
   background: url("img/burger_classic_maxi.png") center right no-repeat;
   background-size: contain;
-  width: 268px;
+  width: 20vw;
   height: 300px;
 
   .add-mo-to-cart {
