--- a/src/components/newFood/style.scss
+++ b/src/components/newFood/style.scss
@@ -22,7 +22,7 @@
         .arrow {
           top: calc(50% - 15px);
           left: auto;
-          right: -37px;
+          right: -14px;
           transform: scaleX(-1);
 
         }
@@ -31,7 +31,7 @@
   }
 
   .chars {
-    width: 40%;
+    width: 47%;
 
     .title {
       font-size: 21px;
@@ -173,8 +173,13 @@
   .pic {
     position: relative;
     cursor: pointer;
+    width: 50%;
+    max-height: 200px;
 
     img {
+      width: 100%;
+      max-height: 98%;
+      margin: 0 auto;
       -webkit-filter: brightness(100%);
     }
   
