--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -28,7 +28,46 @@
   text-decoration: underline;
 }
 .social-icon{
-  margin-right: 10px;
+  margin-right: 7px;
+  height: 25px;
+  width: 25px;
+}
+.sci1{
+}
+.sci2{
+  height: 20px;
+  width: 15px;
+}
+.sci3{
+  height: 20px;
+  width: 12px;
+}
+.sci4{
+  height: 20px;
+}
+.sci5{
+  height: 20px;
+}
+.sci6{
+  height: 20px;
+}
+.sci1:hover{
+  content: url('./img/icons_soc_vk.svg')
+}
+.sci2:hover{
+  content: url('./img/icons_soc_ok.svg');
+}
+.sci3:hover{
+  content: url('./img/icons_soc_fbk.svg');
+}
+.sci4:hover{
+  content: url('./img/icons_soc_inst.svg');
+}
+.sci5:hover{
+  content: url('./img/icons_soc_wtsp.svg');
+}
+.sci6:hover{
+  content: url('./img/icons_soc_tlgr.svg');
 }
 .footer-center-center-text{
   margin-top: 25px;
