--- a/src/components/BurgerSet/style.scss
+++ b/src/components/BurgerSet/style.scss
@@ -65,13 +65,13 @@
   margin-left: 13px;
   width: 150px;
 }
-.burger-cart-text{
+.burger-cart-text {
   width: 222px;
   font-size: 18px;
   color: #838383;
   margin-top: 10px;
 }
-.burger-cart-text-span{
+.burger-cart-text-span {
   color: black;
 }
 .add{
@@ -79,12 +79,12 @@
   width: 65px;
   cursor: pointer;
 }
-.weight{
+.burger-weight {
   font-size: 27px;
   color: #818181;
   margin-top: 10px;
 }
-.burger-cart-plus{
+.burger-cart-plus {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -93,7 +93,7 @@
   margin-left: 30px;
   margin-right: 30px;
 }
-.dont-select-burger-text{
+.dont-select-burger-text {
   display: flex;
   width: 222px;
   font-size: 18px;
