--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -207,3 +207,63 @@ a {
     font-size: 12px;
   }
 }
+
+//font-sizes for diffent resolutions
+
+@media screen and (min-width: 1900px) {
+  html {
+    font-size: 16px;
+  }
+}
+
+@media screen and (min-width: 1800px) and (max-width: 1899px) {
+  html {
+    font-size: 16px;
+  }
+}
+@media screen and (min-width: 1700px) and (max-width: 1799px) {
+  html {
+    font-size: 16px;
+  }
+}
+@media screen and (min-width: 1600px) and (max-width: 1699px) {
+  html {
+    font-size: 16px;
+  }
+}
+
+@media screen and (min-width: 1500px) and (max-width: 1599px) {
+  html {
+    font-size: 16px;
+  }
+}
+
+@media screen and (min-width: 1400px) and (max-width: 1499px) {
+  html {
+    font-size: 16px;
+  }
+}
+
+@media screen and (min-width: 1300px) and (max-width: 1399px) {
+  html {
+    font-size: 16px;
+  }
+}
+
+@media screen and (min-width: 1200px) and (max-width: 1299px) {
+  html {
+    font-size: 16px;
+  }
+}
+
+@media screen and (min-width: 1100px) and (max-width: 1199px) {
+  html {
+    font-size: 16px;
+  }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1099px) {
+  html {
+    font-size: 12px;
+  }
+}
